--- a/PJ_Java2/src/Presentacion/frmOperacionesMatematicas.form
+++ b/PJ_Java2/src/Presentacion/frmOperacionesMatematicas.form
@@ -115,6 +115,7 @@
         <Property name="text" type="java.lang.String" value="Sumar"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnSumarMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSumarActionPerformed"/>
       </Events>
     </Component>
