--- a/PJ_Java2/src/Presentacion/frmOperacionesMatematicas.form
+++ b/PJ_Java2/src/Presentacion/frmOperacionesMatematicas.form
@@ -123,6 +123,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Restar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnRestarMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnMultiplicar">
       <Properties>
