--- a/PJ_Java2/src/Presentacion/frmOperacionesMatematicas.form
+++ b/PJ_Java2/src/Presentacion/frmOperacionesMatematicas.form
@@ -131,6 +131,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Multiplicar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnMultiplicarMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
